@@ -32,14 +32,20 @@ widgets = {
     "BrightnessControl": "brightnesscontrol",
     "ContinuousPoll": "continuous_poll",
     "CurrentLayoutIcon": "currentlayout",
+    "CPUGraph": "graph",
     "GithubNotifications": "githubnotifications",
     "GlobalMenu": "globalmenu",
+    "HDDGraph": "graph",
+    "HDDBusyGraph": "graph",
     "LiveFootballScores": "livefootballscores",
+    "MemoryGraph": "graph",
+    "NetGraph": "graph",
     "WiFiIcon": "network",
     "ScriptExit": "scriptexit",
     "SnapCast": "snapcast",
     "StatusNotifier": "statusnotifier",
     "StravaWidget": "strava",
+    "SwapGraph": "graph",
     "Systray": "systray",
     "TVHWidget": "tvheadend",
     "UnitStatus": "unitstatus",
